--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/koopero/node-handleshells",
   "dependencies": {
+    "async": "^0.9.0",
+    "chai": "^2.1.0",
     "handlebars": "^3.0.0",
-    "shell-escape": "^0.2.0"
+    "minimist": "^1.1.0",
+    "shell-escape": "^0.2.0",
+    "underscore": "^1.8.2"
   }
 }
