--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handleshells",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Allows the building and running of shell commands using handlebars templates.",
   "main": "index.js",
   "scripts": {
@@ -26,8 +26,8 @@
     "async": "^0.9.0",
     "chai": "^2.1.0",
     "handlebars": "^3.0.0",
+    "lodash": "^3.6.0",
     "minimist": "^1.1.0",
-    "shell-escape": "^0.2.0",
-    "underscore": "^1.8.2"
+    "shell-escape": "^0.2.0"
   }
 }
